--- a/HTML/Igor/HTML_ДЗ_4/style.css
+++ b/HTML/Igor/HTML_ДЗ_4/style.css
@@ -273,3 +273,119 @@ input[name="a1"] {
     color: white;
     border-color: white;
 }
+
+.goods-card {
+    background: white;
+    border-radius: 10px;
+    width: 350px;
+    height: 582px;
+    margin-left: 35px;
+    margin-top: 25px;
+}
+.intro {
+    text-align: center;
+    color: black;
+    font-weight: bolder;
+    font-size: 25px;
+}
+.intro p {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+.img {
+    width: 350px;
+    height: 360px;
+    display: inline-block;
+    margin-left: 35px;
+}
+
+.img2 {
+    background: url(img/A52_2.png);
+    background-size: cover;
+    display: inline-block;
+    width: 250px;
+    height: 317px;
+
+
+    transition: 0.8s;
+    margin-left:  15px;
+
+}
+
+.img2:hover {
+    background: url(img/A52_3.png);
+    background-size: cover;
+    display: inline-block;
+    width: 310px;
+    height: 310px;
+    transform: none;
+}
+
+.img2:active {
+    background: url(img/A52_3.png);
+    background-size: cover;
+    display: inline-block;
+    /*width: 345px;*/
+    /*height: 345px;*/
+    transform: scale(1.4);
+
+}
+
+.discription {
+    display: inline-block;
+    /*border: 3px solid blue;*/
+    width: 350px;
+    height: 182px;
+    vertical-align: top;
+}
+.table caption {
+    font-weight: bold;
+    font-size: 17px;
+    margin-bottom: 10px;
+}
+.table {
+    border-collapse: collapse;
+
+}
+.table tr:hover {
+    background: rgba(0, 0, 255, 0.3);
+}
+.table td {
+    border: 4px solid rgba(164, 199, 227, 0.72);
+    vertical-align: middle;
+    padding-left: 3px;
+    padding-right: 3px;
+    /*background: white;*/
+    border-radius: 5px;
+}
+
+/*.table tr:hover {
+    background: blue;
+}*/
+
+.table td:nth-child(2) {
+    text-align: center;
+}
+.my-table {
+    margin-top: 25px;
+    margin-left: 35px;
+    border-collapse: collapse;
+}
+
+.my-table th, td {
+    border: 2px solid blue;
+    width: 200px;
+
+}
+.my-table tbody tr:hover {
+
+    background: rgba(0, 0, 255, 0.3);
+}
+
+
+
+
+
+
+
+
